{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 154,
  "lineage": "61904db4-999e-4bf7-4d3b-21b2c1fe8ba7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/networkInterfaces/my-nic",
            "internal_domain_name_suffix": "i1wyqg3ceofefhrnhkas35aflh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/publicIPAddresses/my-ip",
                "subnet_id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-16-1A-1D",
            "name": "my-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "my-resources",
            "virtual_machine_id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Compute/virtualMachines/my-vm"
          },
          "dependencies": [
            "azurerm_public_ip.my-ip",
            "azurerm_resource_group.my-rg",
            "azurerm_subnet.my-subnet",
            "azurerm_virtual_network.my-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/networkSecurityGroups/my-sg",
            "location": "eastus",
            "name": "my-sg",
            "resource_group_name": "my-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "my-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.my-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "my-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/networkSecurityGroups/my-sg/securityRules/my-dev-rule",
            "name": "my-dev-rule",
            "network_security_group_name": "my-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "my-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.my-sg",
            "azurerm_resource_group.my-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/publicIPAddresses/my-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.68.222.166",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "my-ip",
            "resource_group_name": "my-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.my-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet",
            "name": "my-subnet",
            "resource_group_name": "my-resources",
            "virtual_network_name": "my-network"
          },
          "dependencies": [
            "azurerm_resource_group.my-rg",
            "azurerm_virtual_network.my-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "my-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet",
            "network_security_group_id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/networkSecurityGroups/my-sg",
            "subnet_id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.my-sg",
            "azurerm_resource_group.my-rg",
            "azurerm_subnet.my-subnet",
            "azurerm_virtual_network.my-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1b88ed46-23a2-428a-9e2d-3a812efc055f",
            "id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/virtualNetworks/my-network",
            "location": "eastus",
            "name": "my-network",
            "resource_group_name": "my-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet",
                "name": "my-subnet",
                "security_group": "/subscriptions/8507c4e1-f8e8-4239-a149-77d95255678f/resourceGroups/my-resources/providers/Microsoft.Network/networkSecurityGroups/my-sg"
              }
            ],
            "tags": {
              "enviorment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.my-rg"
          ]
        }
      ]
    }
  ]
}